--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>Login - Brary</title>
     <style>
         body {
-            background-image: url("/img/img-login.jpg");
+            background: url("/img/img-login.jpg");
             background-position: center;
             display: flex;
             justify-content: center;
