--- a/buku.html
+++ b/buku.html
@@ -56,66 +56,195 @@
     </header>
     <!-- End Header -->
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
-        <div class="container position-relative">
+    <!-- Main Section -->
+    <!-- Judul -->
+    <section>
+        <div class="container my-7">Blank <br /> <br /></div>
+    </section>
+    <section id="main" class="main">
+        <div class="container my-5 mt-13">
             <div class="row">
-                <div class="col-md-6 d-flex align-items-center">
-                    <div class="">
-                        <h1>Brary</h1>
-                        <h4>Tempat kamu menemukan buku <br> yang sesuai dengan kebutuhanmu</h4>
-                        <button type="button" class="btn btn-dark">Explore Now</button>
-                    </div>
+                <div class="col-9">
+                    <h3>Koleksi Buku</h3>
                 </div>
-
-                <div class="col-md-6">
-                    <div id="carouselExampleIndicators" class="carousel slide">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+                <!-- Kategori -->
+                <div class="col">
+                    <input class="rounded-3" type="text" id="kata" name="kata" onkeyup="lihat(this.value)">
                 </div>
-
+                <hr>
+                <div>
+                    <button type="button" class="btn btn-dark rounded-pill">Novel</button>
+                    <button type="button" class="btn btn-dark rounded-pill">Akuntansi</button>
+                    <button type="button" class="btn btn-dark rounded-pill">Sipil</button>
+                    <button type="button" class="btn btn-dark rounded-pill">Programming</button>
+                    <button type="button" class="btn btn-dark rounded-pill dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Lainnya
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a class="dropdown-item" href="#">Multimedia</a></li>
+                        <li><a class="dropdown-item" href="#">Perkantoran</a></li>
+                        <li><a class="dropdown-item" href="#">Elektronika</a></li>
+                        <li><a class="dropdown-item" href="#">Game Development</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </section>
-    <!-- End Hero -->
-
-    <!-- Main Section -->
-    <section id="main" class="main">
-        <div class="container">
-            <div class="row">
-                <h3>Buku</h3>
-                <hr>
-                <p>BELUM ADA ISINYA</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatem beatae vel. Nisi,
-                    expedita! Atque, quaerat explicabo. Sapiente, pariatur praesentium.</p>
+        <!-- Pilihan Buku -->
+        <div class="book container my-5">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card h-100 w-100 rounded-5 border-black border-2">
+                        <img src="img/cover1.png" class="card-img-top mt-3 my-2 mx-4"
+                            style="width: 200px; height: 200px; " alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center py-2"><b>Psychic Psalms</b></h5>
+                            <p class="card-text">Membaca kondisi Psikologis lawan bicara anda agar hidup lebih terarah
+                            </p>
+                        </div>
+                        <div class="my-3 mx-3">
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                            <button type="button" class="btn btn-dark btn-sm">Psikologi</button>
+                        </div>
+                        <div class="d-grid gap-2 col-6 mx-auto my-3">
+                            <button type="button" class="btn btn-dark rounded-4">Pinjam</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
