--- a/riwayat.html
+++ b/riwayat.html
@@ -56,70 +56,120 @@
     </header>
     <!-- End Header -->
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
-        <div class="container position-relative">
-            <div class="row">
-                <div class="col-md-6 d-flex align-items-center">
-                    <div class="">
-                        <h1>Brary</h1>
-                        <h4>Tempat kamu menemukan buku <br> yang sesuai dengan kebutuhanmu</h4>
-                        <button type="button" class="btn btn-dark">Explore Now</button>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div id="carouselExampleIndicators" class="carousel slide">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/img-login.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- End Hero -->
-
-    <!-- Main Section -->
     <section id="main" class="main">
         <div class="container">
             <div class="row">
                 <h3>Riwayat</h3>
                 <hr>
-                <p>BELUM ADA ISINYA</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatem beatae vel. Nisi,
-                    expedita! Atque, quaerat explicabo. Sapiente, pariatur praesentium.</p>
+            </div>
+            <!-- Pengaturan Card -->
+            <div class="row row-cols-2 row-cols-md-1 g-4 pb-3">
+                <!-- Container Card 1 -->
+                <div class="card rounded-5 border-black border-2">
+                    <!-- Isi Card -->
+                    <div class="row py-2">
+                        <!-- Cover Buku -->
+                        <div class="col-2 px-2">
+                            <img src="img/cover1.png" class="card-img-left my-3" width="250" height="250" alt="...">
+                        </div>
+                        <!-- Keterangan Buku -->
+                        <div class="col-10 align-self-center ps-5">
+                            <!-- Judul Buku -->
+                            <div class="row ps-3">
+                                <div class="card-body">
+                                    <h1 class="card-title ps-3"><b>Psychic Psalms</b></h1>
+                                </div>
+                            </div>
+                            <!-- Kolom Informasi -->
+                            <div class="row ps-3">
+                                <!-- Informasi Peminjaman -->
+                                <div class="row">
+                                    <div class="col-8 ps-3">
+                                        <div class="card-body">
+                                            <p class="card-text fs-5">
+                                                Tanggal Peminjaman : <br />
+                                                Tanggal Pengembalian : <br />
+                                                Durasi Peminjaman :
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="card-body">
+                                            <p class="card-text fs-5 text-end">
+                                                2 Juli 2023 <br />
+                                                8 Juli 2023 <br />
+                                                hr
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-8 ps-3"></div>
+                                <div class="col">
+                                    <div class="card-body d-grid gap-2 justify-content-md-end pe-4">
+                                        <a href="#" class="btn btn-danger btn-sm">Belum dikembalikan</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Container Card 1 -->
+                <div class="card rounded-5 border-black border-2">
+                    <!-- Isi Card -->
+                    <div class="row py-2">
+                        <!-- Cover Buku -->
+                        <div class="col-2 px-2">
+                            <img src="img/cover1.png" class="card-img-left my-3" width="250" height="250" alt="...">
+                        </div>
+                        <!-- Keterangan Buku -->
+                        <div class="col-10 align-self-center ps-5">
+                            <!-- Judul Buku -->
+                            <div class="row ps-3">
+                                <div class="card-body">
+                                    <h1 class="card-title ps-3"><b>Psychic Psalms</b></h1>
+                                </div>
+                            </div>
+                            <!-- Kolom Informasi -->
+                            <div class="row ps-3">
+                                <!-- Informasi Peminjaman -->
+                                <div class="row">
+                                    <div class="col-8 ps-3">
+                                        <div class="card-body">
+                                            <p class="card-text fs-5">
+                                                Tanggal Peminjaman : <br />
+                                                Tanggal Pengembalian : <br />
+                                                Durasi Peminjaman :
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="card-body">
+                                            <p class="card-text fs-5 text-end">
+                                                2 Juli 2023 <br />
+                                                8 Juli 2023 <br />
+                                                hr
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-8 ps-3"></div>
+                                <div class="col">
+                                    <div class="card-body d-grid gap-2 justify-content-md-end pe-4">
+                                        <a href="#" class="btn btn-success btn-sm">Sudah dikembalikan</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- End Main  -->
 
     <!-- Footer Section -->
     <footer id="footer">
